--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="lt">
   <head>
     {% block head %}
-    <title>SuperApp{% block title %}{% endblock %}</title>
+    <title>Lieptas{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -10,10 +10,10 @@
     <meta charset="utf-8">
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='css/transkribator.css') }}" rel="stylesheet">
@@ -23,20 +23,12 @@
     {% endblock %}
   </head>
   <body>
-    {% block navbar %}
-    <div class="navbar navbar-static-top navbar-default">
-      <div class="container">
-        <button class="navbar-toggle">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">SuperApp</a>
-        
-      </div>
-    </div>
-    {% endblock %}
-    <div class="container page">
+    <div class="container-fluid page">
+        {% block navbar %}
+        <div class="navbar navbar-static-top navbar-default">
+            <a class="navbar-brand" href="/">Lieptas</a>            
+        </div>
+        {% endblock %}
         <div class="content">
           {% block content %}
           {% endblock %}
@@ -44,13 +36,13 @@
         <hr>
         {% block footer %}
         <footer class="footer">
-            <p>&copy; SuperApp</p>
+            <p>&copy; Liepa</p>
         </footer>
         {% endblock %}
     </div>
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript">
 
         {% block js_footer %}
